Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-15415

[C++] Cannot build debug with MSVC and vcpkg

    XMLWordPrintableJSON

Details

    Description

      While trying to create a debug build of Arrow on Windows using vcpkg and MSVC, I encountered a few issues with the current build configuration:

      1. Python debug and release libraries are passed, but our Cmake scripts only expect one or the other. Just as reported in ARROW-13470
      2. Since vcpkg upgraded gtest to 1.11.0, there is again a mismatch between the bundled gtest and the vcpkg versions. So we get the same error as was found in ARROW-14393
      3. Thrift could not find debug static libraries, because it was missing the "d" suffix. It should be libthriftmdd.lib, but was finding libthriftmd.lib.

      Additionally, the recommended clcache program from our Windows developer docs is no longer maintained. I found its dependency pyuv doesn't install on Windows anymore, and is also no longer maintained.

      Attachments

        Issue Links

          Activity

            People

              kou Kouhei Sutou
              wjones127 Will Jones
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 6h
                  6h